--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"node start.js"
   },
-  "author": "",
+  "author": "CBKM",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
