--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node start.js"
+    "start": "node start.js"
   },
   "author": "CBKM",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mongoose": "^5.6.5",
     "nodemon": "^1.19.1"
   }
