--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node start.js"
+    "start": "nodemon start.js"
   },
   "author": "CBKM",
   "license": "ISC",
