--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.16.2",
     "mongoose": "^5.6.5",
     "multer": "^1.4.2",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "uniqid": "^5.0.3"
   }
 }
