--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.16.2",
     "imagemin": "^7.0.0",
     "imagemin-jpegtran": "^6.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
     "mongoose": "^5.6.5",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1",
